[package]
name = "bcdown"
version = "0.1.1"
edition = "2021"
authors = ["lihe07"]
description = "Bilibili漫画下载器，written in Rust"
repository = "https://github.com/lihe07/bilibili_comics_downloader"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
clap = "3.1.18"
colorful = "0.2.1"
crossbeam = "0.8.1"
ctrlc = "3.2.2"
directories = "4.0.1"
epub-builder = "0.5.0"
indicatif = "0.16.2"
md5 = "0.7.0"
paris = "1.5.13"
printpdf = { version = "0.5.2", features = ["embedded_images"] }
qrcode = "0.12.0"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
toml = "0.5.9"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
