[package]
name = "bcdown"
version = "0.2.2"
edition = "2021"
authors = ["lihe07"]
keywords = ["bcdown", "bilibili", "downloader", "comic"]
description = "Bilibili漫画下载器，written in Rust，支持epub pdf zip格式"
repository = "https://github.com/lihe07/bilibili_comics_downloader"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = "0.4.22"
clap = "3.2.22"
colorful = "0.2.1"
crossbeam = "0.8.1"
ctrlc = "3.2.3"
directories = "4.0.1"
enum_dispatch = "0.3.8"
epub-builder = "0.5.0"
futures = "0.3.24"
indicatif = "0.17.1"
md5 = "0.7.0"
paris = "1.5.13"
printpdf = { version = "0.5.3", features = ["embedded_images"] }
qrcode = "0.12.0"
reqwest = { version = "0.11.13", features = ["json", "rustls-tls"], default-features=false }
serde_json = "1.0.85"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.1", features = ["full"] }
toml = "0.5.9"
zip = "0.6.2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
