[package]
name = "bcdown"
version = "0.3.0"
edition = "2021"
authors = ["lihe07"]
keywords = ["bcdown", "bilibili", "downloader", "comic"]
description = "BiliBili漫画下载器，支持多种导出格式"
repository = "https://github.com/lihe07/bilibili_comics_downloader"
license = "MIT"

[dependencies]
base64 = "0.13.0"
chrono = "0.4.22"
clap = "3.2.22"
colorful = "0.2.1"
crossbeam = "0.8.1"
ctrlc = "3.2.3"
dirs = "4.0"
epub-builder = "0.5.0"
futures = "0.3.24"
indicatif = "0.17.1"
md5 = "0.7.0"
qrcode = "0.12.0"
reqwest = { version = "0.11.11", features = ["json", "rustls-tls"], default-features=false }
serde_json = "1.0.85"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.1", features = ["full"] }
toml = "0.5.9"
zip = "0.6.2"
trauma = "2.2.0"
scannedpdf = "0.1.0"
log = "0.4.17"
lazy_static = "1.4.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
